k8s/base/resources/winecellar-srv.yaml
---
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: "app-winecellar-server"
  labels:
    app: "app-winecellar-server"
    kind: "app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "app-winecellar-server"
  template:
    metadata:
      labels:
        app: "app-winecellar-server"
        kind: "app"
    spec:
      containers:
        - name: "main"
          resources:
            requests:
              memory: "256Mi"
              cpu: "10m"
          image: "winecellar-server:latest"
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: app-winecellar
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: app-winecellar-server
  type: ClusterIP
