k8s/base/resources/winery-srv.yaml
---
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: "app-winery-server"
  labels:
    app: "app-winery-server"
    kind: "app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "app-winery-server"
  template:
    metadata:
      labels:
        app: "app-winery-server"
        kind: "app"
    spec:
      containers:
        - name: "main"
          resources:
            requests:
              memory: "256Mi"
              cpu: "10m"
          image: "winery-server:latest"
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: app-winery
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: app-winery-server
  type: ClusterIP
