k8s/base/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # configure traefik for http2 / grpc - not working :(
    ingress.kubernetes.io/protocol: h2c
  labels:
    app: sample-grpc
  name: sample-grpc
spec:
  rules:
    # this currently doesn't work as is in a k3d cluster - therefore the service is exposed via node port, or telepresence
    - host: sample-grpc.k3d.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-winecellar
                port:
                  number: 80
  tls:
    - hosts:
        - sample-grpc.k3d.localhost
---
# exposes the service directly on node port, to bypass the ingress, which doesn't properly support http2
apiVersion: v1
kind: Service
metadata:
  name: app-winecellar-nodeport
spec:
  ports:
    - port: 80
      nodePort: 30080
      targetPort: 8080
      protocol: TCP
  selector:
    app: app-winecellar-server
  type: NodePort
